--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "tsc && cross-env NODE_ENV=development nodemon dist/server.js",
     "debug": "cross-env NODE_ENV=development nodemon --debug index.js",
+    "build": "tsc",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check **/*.js",
@@ -31,6 +32,7 @@
     "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@types/express": "^4.17.21",
     "eslint": "^7.0.0",
     "eslint-config-airbnb-base": "^14.0.0",
